--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"deploy": "opennextjs-cloudflare build && wrangler deploy",
-		"preview": "opennextjs-cloudflare build && wrangler dev",
+		"deploy": "opennextjs-cloudflare build && node scripts/post-build.js && wrangler deploy",
+		"preview": "opennextjs-cloudflare build && node scripts/post-build.js && wrangler dev",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
