--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "next-js-workers-test",
+	"name": "cf-hyper-personalisation",
 	"main": "worker.ts",
 	"compatibility_date": "2025-03-01",
 	"compatibility_flags": [
